--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "aphrodite": "^2.2.3",
+    "popmotion": "^8.6.2",
     "react": "^16.8.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-pose": "^4.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "react-sound": "^1.2.0",
+    "react-spring": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
