--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "aphrodite": "^2.2.3",
+    "bootstrap": "^4.3.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "popmotion": "^8.6.2",
     "react": "^16.8.1",
     "react-animations": "^1.0.0",
-    "react-dom": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.3",
+    "react-mathjax": "^1.0.1",
+    "react-mathjax-preview": "^0.1.10",
+    "react-native-mathjax": "^2.0.0",
     "react-pose": "^4.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-sound": "^1.2.0",
-    "react-spring": "^8.0.7"
+    "react-spring": "^8.0.7",
+    "reactstrap": "^7.1.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
