--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-mathjax": "^1.0.1",
     "react-mathjax-preview": "^0.1.10",
     "react-native-mathjax": "^2.0.0",
+    "react-player": "^1.9.3",
     "react-pose": "^4.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
